# ImportSearch

./: .gitignore  .pypirc  README-ja.md  README.md  final.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
ImportSearch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: example.py
examples/sample_dir/: main.py  target.py  tools.py
examples/sample_dir/color/: __init__.py  blue.py  green.py  palette.py
examples/sample_dir/services/: __init__.py  lighting.py
examples/sample_dir/utils/: __init__.py  io.py  validation.py
moduletracker/: __init__.py  moduletracker.py
moduletracker.egg-info/: PKG-INFO  SOURCES.txt
src/importsearch/: __init__.py  cli.py  core.py  main.py  test.py  tree.py
tests/: test_core.py
tests/fixtures/dependency_demo/: entry.py
tests/fixtures/dependency_demo/pkg/: alpha.py  beta.py
tests/fixtures/dependency_demo/pkg/shared/: helpers.py
tests/fixtures/dependency_demo/utilities/: logger.py
tests/fixtures/dependency_demo/utilities/formatters/: json_formatter.py
