[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "importsearch"
version = "0.2.3.8"
authors = [
  { name="eto56", github="https://github.com/eto56"},
]
description = "A package to track your imports"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "typer>=0.19.2",
    "rich>=13.9.2",
]

[project.scripts]
importsearch = "importsearch.cli:import_search_app"

[project.urls]
Homepage = "https://github.com/eto56/ImportSearch"
Issues = "https://github.com/eto56/ImportSearch/issues"

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "mypy>=1.18.2",
    "pytest>=8.3.5",
    "ruff>=0.14.0",
    "twine==6.2.0",
    "build==1.3.0"
]
